--- a/src/Resources/translations/LleHermesBundle.en.yaml
+++ b/src/Resources/translations/LleHermesBundle.en.yaml
@@ -1,40 +1,40 @@
 action:
-  add: Add
-  delete: Delete
-  edit: Edit
-  export: Export
-  show: Show
+    add: Add
+    delete: Delete
+    edit: Edit
+    export: Export
+    show: Show
 crudit:
-  action: Actions
+    action: Actions
 crud:
-  title:
-    list:
-      template: Template
-      mail: Mail
-      recipient: Recipient
+    title:
+        list:
+            template: Template
+            mail: Mail
+            recipient: Recipient
 export:
-  csv: Csv
-  excel: Excel
+    csv: Csv
+    excel: Excel
 field:
-  code: code
-  libelle: Libelle
-  mail: mail
-  'mail:sendingDate': Sending Date
-  openDate: Open Date
-  opendate: open date
-  senderEmail: Sender Email
-  senderemail: Sender Email
-  senderName: sender name
-  sendername: sender name
-  sendingDate: Sending Date
-  sendingdate: sending date
-  status: status
-  subject: Subject
-  toEmail: To Email
-  toemail: to email
-  toName: To Name
-  toname: to name
-  unsubscriptions: Unsubscriptions
+    code: code
+    libelle: Label
+    mail: mail
+    'mail:sendingDate': Sending date
+    openDate: Open date
+    opendate: Open date
+    senderEmail: Sender email
+    senderemail: Sender email
+    senderName: Sender name
+    sendername: Sender name
+    sendingDate: Sending date
+    sendingdate: Sending date
+    status: status
+    subject: Subject
+    toEmail: To email
+    toemail: To email
+    toName: To name
+    toname: To name
+    unsubscriptions: Unsubscriptions
 menu:
-  lle_hermes:
-    hermes: Hermes
+    lle_hermes:
+        hermes: Hermes
