--- a/src/Resources/translations/LleHermesBundle.fr.yaml
+++ b/src/Resources/translations/LleHermesBundle.fr.yaml
@@ -20,6 +20,8 @@ crud:
             recipient: Destinataire %entity%
         edit:
             template: Édition modèle %entity%
+    tab:
+        recipients: Destinataires
 
 export:
     csv: Csv
@@ -29,6 +31,7 @@ field:
     code: Code
     libelle: Libellé
     mail: Mail
+    recipients: Destinataires
     'mail:sendingDate': Date d'envoi
     openDate: Date d'ouverture
     opendate: Date d'ouverture
