Supprimer le titre de l'écran show des mails 2le/2le#3743

--- a/src/Resources/translations/LleHermesBundle.en.yaml
+++ b/src/Resources/translations/LleHermesBundle.en.yaml
@@ -16,7 +16,7 @@ crud:
             recipient: Recipient
         show:
             template: Template %entity%
-            mail: Mail "%entity%"
+            mail: ""
             recipient: Recipient %entity%
         edit:
             template: Edit template %entity%
@@ -46,6 +46,8 @@ field:
     toName: To name
     toname: To name
     unsubscriptions: Unsubscriptions
+    recipients: Recipient
+    jsonattachement: Attachments
 
 title:
     totalToSend: Mails to send
