Allow deletion of mails and attachements

--- a/src/Resources/translations/LleHermesBundle.en.yaml
+++ b/src/Resources/translations/LleHermesBundle.en.yaml
@@ -27,6 +27,8 @@ crud:
             recipient: Create recipient
     action:
         duplicate: Duplicate
+    canDelete:
+        mail: The email is being sent
 
 tab:
     recipients: Recipients
