Feature : send test mail 2le/crudit#259

--- a/src/Resources/translations/LleHermesBundle.en.yaml
+++ b/src/Resources/translations/LleHermesBundle.en.yaml
@@ -118,3 +118,10 @@ text:
 flash:
     copyAlreadyExist: A copy of this template already exists, please edit the code of the copy and try again
     mail_sended: '%nb% / %nbTotal% mails sent'
+
+modal:
+    action:
+        cancel: Cancel
+        send: Send
+    message:
+        sendTestMail: Send a test mail to
