Design improvements for dashboard

--- a/src/Resources/translations/LleHermesBundle.en.yaml
+++ b/src/Resources/translations/LleHermesBundle.en.yaml
@@ -60,6 +60,7 @@ field:
     status: status
     totalOpened: Opening rate
     sendingRate: Sending rate
+    mailStatistics: Mail statistics
     html: HTML
     subject: Subject
     toEmail: To email
