--- a/src/Resources/translations/LleHermesBundle.en.yaml
+++ b/src/Resources/translations/LleHermesBundle.en.yaml
@@ -118,6 +118,8 @@ text:
 flash:
     copyAlreadyExist: A copy of this template already exists, please edit the code of the copy and try again
     mail_sent: '%nb% / %nbTotal% mails sent'
+    copy_for_tenants: '%count% copied templates'
+
 
 modal:
     action:
