Fix phpstan issues

--- a/src/Resources/translations/LleHermesBundle.en.yaml
+++ b/src/Resources/translations/LleHermesBundle.en.yaml
@@ -123,6 +123,7 @@ text:
 flash:
     copyAlreadyExist: A copy of this template already exists, please edit the code of the copy and try again
     mail_sent: '%nb% / %nbTotal% mails sent'
+    no_email: No email address has been filled in
 
 modal:
     action:
