--- a/src/Resources/translations/LleHermesBundle.fr.yaml
+++ b/src/Resources/translations/LleHermesBundle.fr.yaml
@@ -13,14 +13,17 @@ crudit:
 crud:
     title:
         list:
-            template: Template
-            mail: Mail
-            recipient: Destinataire
+            template: Templates
+            mail: Mails
+            recipient: Destinataires
+            emailerror: Emails en erreur
         show:
             template: Modèle %entity%
             mail: ""
             recipient: Destinataire %entity%
             link: Lien %entity%
+            emailerror: Email en erreur %entity%
+            error: Erreur %entity%
         edit:
             template: Édition modèle %entity%
         new:
@@ -38,6 +41,7 @@ tab:
     recipients: Destinataires
     links: Liens
     linkOpening: Liens ouverts
+    errors: Erreurs
 
 export:
     csv: Csv
@@ -85,6 +89,10 @@ field:
         template_informations: Informations
         template_content: Contenu
         template_options: Options
+    email: Email
+    nberror: Nombre d'erreurs
+    date: Date
+    content: Contenu
 
 title:
     dashboard: Tableau de bord
