Don't send mail to a recipient if he has reached the error limit set in configuration

--- a/src/Resources/translations/LleHermesBundle.en.yaml
+++ b/src/Resources/translations/LleHermesBundle.en.yaml
@@ -76,6 +76,7 @@ field:
     toname: To name
     unsubscriptions: Unsubscriptions
     statistics: Statistics
+    sendtoerrors: Send to email addresses in error
     jsonattachement: Attachments
     totalLinkOpening: Number of links opened
     link: Link
