Mail: fix link duplication 2le/crudit#442

--- a/src/Resources/translations/LleHermesBundle.en.yaml
+++ b/src/Resources/translations/LleHermesBundle.en.yaml
@@ -84,6 +84,7 @@ field:
     link: Link
     url: URL
     nbopenings: Opening number
+    nbuniqueopenings: Unique opening number
     nbopeningsLinks: Link opening number
     linkOpeningRate: Link opening rate
     firstLinkOpening: First opening date
