Recipient: show data column 2le/crudit#446

--- a/src/Resources/translations/LleHermesBundle.en.yaml
+++ b/src/Resources/translations/LleHermesBundle.en.yaml
@@ -99,6 +99,7 @@ field:
     date: Date
     content: Content
     custombounceemail: Custom bounce email
+    data: Data
 
 title:
     dashboard: Dashboard
