--- a/src/Resources/translations/LleHermesBundle.fr.yaml
+++ b/src/Resources/translations/LleHermesBundle.fr.yaml
@@ -100,6 +100,7 @@ field:
     date: Date
     content: Contenu
     custombounceemail: E-mail bounce personnalisé
+    data: Données
 
 title:
     dashboard: Tableau de bord
