Attachements on template

--- a/src/Resources/translations/LleHermesBundle.de.yaml
+++ b/src/Resources/translations/LleHermesBundle.de.yaml
@@ -47,6 +47,7 @@ tab:
     links: Links
     linkOpening: Geöffnete Links
     errors: Fehler
+    attached_files: Angehängte Dateien
 
 export:
     csv: Csv
