--- a/src/Resources/translations/LleHermesBundle.en.yaml
+++ b/src/Resources/translations/LleHermesBundle.en.yaml
@@ -47,6 +47,7 @@ tab:
     links: Links
     linkOpening: Opened links
     errors: Errors
+    attached_files: Attached files
 
 export:
     csv: Csv
