--- a/src/Resources/translations/LleHermesBundle.fr.yaml
+++ b/src/Resources/translations/LleHermesBundle.fr.yaml
@@ -47,6 +47,7 @@ tab:
     links: Liens
     linkOpening: Liens ouverts
     errors: Erreurs
+    attached_files: Pièces jointes
 
 export:
     csv: Csv
