Register error message on recipient

--- a/src/Resources/translations/LleHermesBundle.de.yaml
+++ b/src/Resources/translations/LleHermesBundle.de.yaml
@@ -104,6 +104,7 @@ field:
     content: Inhalt
     custombounceemail: Benutzerdefinierte Bounce-E-Mail
     data: Daten
+    errormessage: Fehlermeldung
 
 title:
     dashboard: Dashboard
